--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "js-randomize": "^1.1.1",
     "leva": "^0.9.28",
     "mini-css-extract-plugin": "^2.4.5",
+    "nanoid": "^4.0.0",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
+    "r3f-perf": "^6.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
@@ -61,6 +63,7 @@
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "three": "^0.141.0",
+    "throttle-debounce": "^5.0.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
